2019-November-23 Struan Robertson

		* Fragmentation.h, PriorDistFragmentation.cpp, ExchangeReaction.cpp, Defaults.xml 
		PseudoIsomerizationReaction.cpp: Introduction of fragmentation plugin class.

		* IsomerizationReaction.cpp: Added check for the error that react and product are 
		the same.

		* MesmerFlag.cpp: Set default for useTheSameCellNumber flag to true.

		* EthyleneAbstraction.xml: Updated with correct rate data.

2019-October-30 Struan Robertson

		* CollisionOperator.cpp: Changes related to the Exchange reaction method.

		* ExchangeReaction.cpp/.h, Fragmentation.h: Further updates to implementation of the 
		micro-rate method.

		* Marquardt.cpp, HinderedRotorUtilis.cpp: Corrected warning output channel.

2019-October-27 Struan Robertson

		* PseudoIsomerizationReaction.cpp, PriorDistFragmentation.cpp/.h: Updated following 
		interface change.

		* ExchangeReaction.cpp/.h, Fragmentation.h: Updated implementation of the micro-rate 
		method.

		* MesmerMath.h: Added normalization method.

		* MesmerMath.h, MesmerTools.cpp, ParseForPlugin.cpp, SensitivityAnalysis.cpp, qd_test.h: 
		Header file rationalization. 

		* Marquardt.cpp: Fix for Linux64 build break.

2019-October-22 Struan Robertson

		* PseudoIsomerizationReaction.h/.cpp: Header file re-arrangement.

		* ClassicalCoupledRotors.cpp, HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, 
		HinderedRotorUtils.cpp: Improved reporting.

		* ExchangeReaction.cpp/.h, Reaction.h: Initial implementation of the micro rate method.

2019-October-14 Struan Robertson

		* Fragmentation.h, PriorDistFragmentation.h.cpp, PseudoIsomerizationReaction.h/.cpp, 
		Association.h/.cpp: Extraction fragmentation into a separate class.

		* MesmerILT.cpp: Fixed bug related to extended treatment.

		* Marquardt.cpp: Improved error reporting.

		* TMatrix.h: Improved error reporting.

		* Makefile, Mesmer.vcproj: Updated project files to account for file changes for 
		fragmentation.

2019-October-07 Struan Robertson
